src/test/ui/lifetimes/lifetime-errors/ex3-both-anon-regions-latebound-regions.stderr
error[E0623]: lifetime mismatch
  --> $DIR/ex3-both-anon-regions-latebound-regions.rs:2:12
   |
LL | fn foo<'a,'b>(x: &mut Vec<&'a u8>, y: &'b u8) {
   |                           ------      ------ these two types are declared with different lifetimes...
LL |     x.push(y);
   |            ^ ...but data from `y` flows into `x` here

error: aborting due to previous error

